# cpplinq

./: .gitignore  LICENSE  README.md  cpplinq.sln
cpplinq/include/: cpplinq.h  linq.h
cpplinq/test/: CMakeLists.txt  make.py  test.py
cpplinq/test/config/: cpplinq-unittest.vcxproj  cpplinq-unittest.vcxproj.filters
cpplinq/test/src/: main.cpp
cpplinq/test/unittests/: linq_unittest.cpp
